hphp/test/zend/bad/Zend/tests/bug48693.php.expectf
Parse error: %s in %s(%d) : runtime-created function on line 1

Parse error: %s %s(%d) : runtime-created function on line 1
bool(false)
int(2)
bool(false)
int(3)
bool(true)